--- a/templates/MuziekDL/search.html
+++ b/templates/MuziekDL/search.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <form method="GET" action="{% url "search" %}">
-        <label>
-            Search:
-            <input name="search" type="text" placeholder="Search term">
-        </label>
-        <input type="submit" value="Search">
-    </form>
-    {% if entry_list %}
-        {% for entry in entry_list %}
-            <a href="{% url "form_id" entry.id %}">{{ entry }}</a> <br>
-        {% endfor %}
-    {% endif %}
-</body>
-</html>
+{%  extends 'MuziekDL/default_template.html' %}
+
+{% block content %}
+    <div class="section">
+        <div class="container">
+            {% if entry_list %}
+                <ul class="collection with-header">
+                    <li class="collection-header"><h4>Search results:</h4></li>
+                    {% for entry in entry_list %}
+                        <li class="collection-item">
+                            <a href="{% url 'form_id' entry.id %}">
+                                {{ entry }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <h4 class="header center">No song matches your query.</h4>
+            {% endif %}
+        </div>
+    </div>
+{% endblock %}
