--- a/templates/MuziekDL/default_template.html
+++ b/templates/MuziekDL/default_template.html
@@ -52,7 +52,7 @@
           <h5 class="white-text">Source</h5>
           <ul>
             <li><a class="white-text" href="https://github.com/D34DPlayer/MuziekDownloader">GitHub</a></li>
-            <li><a class="white-text" href="#">Documentation</a></li>
+            <li><a class="white-text" href="https://github.com/D34DPlayer/MuziekDownloader/wiki/REST-API">Documentation</a></li>
           </ul>
         </div>
       </div>
